--- a/style.css
+++ b/style.css
@@ -6,4 +6,22 @@
 body{
 	overflow: hidden;
 	background-color: darkblue;
+	position: relative;
+}
+
+#resolutionBlock{
+	position: absolute;
+	right:5vw;
+	top:5vh;
+	z-index: 1;
+	font-size: 24pt;
+	line-height: 100%;
+	color:white;
+}
+
+canvas{
+	position:absolute;
+	left:0;
+	top:0;
+	z-index: 0;
 }
