--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+@import url('https://fonts.googleapis.com/css?family=Inconsolata|Muli&display=swap');
+
+/*
+	DarkBlue
+	#2D5BA4
+	#297900
+	#145900
+	#093900
+	#D0AB76
+	#654321
+	slategrey
+	#222222
+	darkred
+	orange
+*/
+
 * {
 	padding: 0;
 	margin: 0;
@@ -14,4 +30,69 @@ canvas{
 	left:0;
 	top:0;
 	z-index: 0;
+}
+
+button, span{
+	z-index: 1;
+	position:absolute;
+	text-align:center;
+	color:#2D5BA4;
+	font-family: 'Muli', sans-serif;
+	border-radius: 1.5vw;
+	overflow:visible;
+	text-transform: uppercase;
+	font-weight: bolder;
+	-webkit-user-select: none; /* Safari */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* IE10+/Edge */
+	user-select: none; /* Standard */
+}
+
+button{
+	font-size:3vw;
+	width:20vw;
+	height:12vh;
+	background-color: DarkBlue;
+	border: 4px solid #2D5BA4;
+}
+
+button:hover{
+	background-color: #2D5BA4;
+	color: DarkBlue;
+	cursor: pointer;
+}
+
+button:focus{
+	outline: none;
+	box-shadow: none;
+	color:white;
+	border: 4px solid white;
+}
+
+#QuickPlay{
+	left:22vw;
+	top:54vh;
+}
+
+#NewGame{
+	left:58vw;
+	top:54vh;
+}
+
+#About{
+	left:40vw;
+	top:74vh;
+}
+
+#Title{
+	left:10vw;
+	top:15vh;
+	width:80vw;
+	height:40vh;
+	font-size:12.5vw;
+	text-shadow: 5px 5px #000;
+}
+
+.menu_hide{
+	display:none;
 }
