--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ canvas{
 	z-index: 0;
 }
 
-button, span{
+.menu, .menu a:visited{
 	z-index: 1;
 	position:absolute;
 	text-align:center;
@@ -46,6 +46,12 @@ button, span{
 	-moz-user-select: none; /* Firefox */
 	-ms-user-select: none; /* IE10+/Edge */
 	user-select: none; /* Standard */
+
+	text-decoration: none;
+}
+
+.menu a{
+	text-decoration: none;
 }
 
 button{
@@ -56,13 +62,13 @@ button{
 	border: 4px solid #2D5BA4;
 }
 
-button:hover{
+button:hover, .menu:hover a{
 	background-color: #2D5BA4;
 	color: DarkBlue;
 	cursor: pointer;
 }
 
-button:focus{
+button:focus, .menu:focus a{
 	outline: none;
 	box-shadow: none;
 	color:white;
@@ -95,4 +101,24 @@ button:focus{
 
 .menu_hide{
 	display:none;
+}
+
+#Website{
+	left:10vw;
+	top:144vh;
+}
+
+#LinkedIn{
+	left:40vw;
+	top:144vh;
+}
+
+#GitHub{
+	left:70vw;
+	top:144vh;
+}
+
+#Back{
+	left:40vw;
+	top:120vh;
 }
