--- a/style.css
+++ b/style.css
@@ -108,3 +108,14 @@ button:focus, .menu:focus a{
 	left:40vw;
 	top:120vh;
 }
+
+#lighting_overlay{
+	position:absolute;
+	left:0;
+	top:0;
+	z-index: 1;
+	width:100vw;
+	height:100vw;
+	background-image: linear-gradient(-45deg, #FF000040, #FF000080, #FFC922FF);
+	opacity: 0;
+}
