--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ button{
 	font-size:3vw;
 	width:20vw;
 	height:12vh;
-	background-color: #000770;
+	background-color: #00077000;
 	border: 4px solid #2D5BA4;
 }
 
